006/Composition/compiling_error.txt
C:\Users\Kagan\Desktop\Sites\CodeBlocks\006\Composition\Birthday.h: In member function 'void Birthday::printDate()':
C:\Users\Kagan\Desktop\Sites\CodeBlocks\006\Composition\Birthday.h:13:13: error: 'cout' was not declared in this scope
             cout << month << "/" << day << "/" << year << endl;
             ^
C:\Users\Kagan\Desktop\Sites\CodeBlocks\006\Composition\Birthday.h:13:13: note: suggested alternative:
In file included from C:\Users\Kagan\Desktop\Sites\CodeBlocks\006\Composition\Birthday.h:3:0:
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
C:\Users\Kagan\Desktop\Sites\CodeBlocks\006\Composition\Birthday.h:13:59: error: 'endl' was not declared in this scope
             cout << month << "/" << day << "/" << year << endl;
                                                           ^
C:\Users\Kagan\Desktop\Sites\CodeBlocks\006\Composition\Birthday.h:13:59: note: suggested alternative:
In file included from C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/iostream:39:0,
                 from C:\Users\Kagan\Desktop\Sites\CodeBlocks\006\Composition\Birthday.h:3:
C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/ostream:564:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
